--- a/assets/styles/style.sass
+++ b/assets/styles/style.sass
@@ -18,6 +18,9 @@ a
 	&[href^="http"]:empty::before
 		content: attr(href)
 
+ul
+	margin: 0
+
 label
 	cursor: pointer !important
 
@@ -42,6 +45,7 @@ header
 	height: 200px
 	color: #FFFFFF
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
+	background: #343434
 	background-position: center
 	.content
 		width: 100%
@@ -51,7 +55,6 @@ header
 		align-items: center
 		justify-content: center
 		background: rgba(0,0, 0, 0.3)
-		backdrop-filter: blur(1.5px)
 		h1
 			margin: 5px 0
 			font-size: 45px
@@ -63,6 +66,8 @@ header
 			margin: 5px 0
 			display: flex
 			font-size: 16px
+			font-weight: 600
+			align-items: center
 			justify-content: center
 			i
 				margin-right: 10px
@@ -157,6 +162,7 @@ footer
 
 .lgt-table
 	width: 100%
+	font-size: 15px
 	text-align: left
 	border-collapse: collapse
 	background: #212121
@@ -168,24 +174,22 @@ footer
 			text-align: center
 	th
 		padding: 10px
-		border: 1px solid #000000
 		text-align: center
-		color: #000000
-		background: #ADADAD
+		color: #FFFFFF
+		background: #111111
 	td
-		padding: 25px 10px
-		font-size: 15px
-		border: 1px solid #000000
+		padding: 25px 15px
+		border: 1px solid #111111
 		position: relative
 		&:empty::before
 			content: "-"
 		label
 			padding: 0 5px
 			position: absolute
-			top: 5px
-			right: 5px
+			top: 7px
+			right: 7px
 			font-size: 11px
-			border-radius: $BORDER_RADIUS
+			border-radius: 3px
 			color: #000000
 			background: #40f100
 			&[st^="lang"]
@@ -193,11 +197,11 @@ footer
 				&::after
 					content: "lang"
 			&[st^="skill"]
-				background: #5658ff
+				background: #00ffdd
 				&::after
 					content: "skill"
 			&[st^="fram"]
-				background: #40f100
+				background: #44ff00
 				&::after
 					content: "framework"
 		.lgt-table
@@ -209,7 +213,7 @@ footer
 		transition: all 0.3s
 		&:hover
 			color: #000000
-			background: #F1F1F1
+			background: #d5d5d5
 
 .lgt-socials-bar
 	display: flex
@@ -271,17 +275,32 @@ footer
 	nav
 		display: none
 	.left-column
-		padding: 10px
+		padding: 20px
 	.right-column
-		padding: 10px
+		padding: 20px
+		.lgt-card:first-child
+			margin-top: -20px
 
-@media (max-width: 375px)
-	header
+@media (max-width: 767px)
+	header .content
 		h1
 			font-size: 30px
 		p
 			font-size: 12px
 			i
 				font-size: 10px
+	.lgt-card
+		h2
+			font-size: 18px
+		p
+			font-size: 13px
 	.lgt-table
-		font-size: 13px
+		font-size: 10px
+		td
+			padding: 20px 5px
+			label
+				font-size: 7px
+				border-radius: 2px
+	footer
+		p
+			font-size: 8px
