--- a/assets/styles/style.sass
+++ b/assets/styles/style.sass
@@ -17,6 +17,8 @@ a
 	cursor: pointer !important
 	&[href^="http"]:empty::before
 		content: attr(href)
+	&:hover
+		color: #FFC300
 
 ul
 	margin: 0
@@ -30,7 +32,6 @@ label
 	- header
 	- nav
 	- footer
-
 html
 	scrollbar-width: none
 	scroll-behavior: smooth
@@ -74,7 +75,7 @@ header
 				font-size: 14px
 
 nav
-	margin-top: 20px
+	margin-top: 20px !important
 	padding: 10px 20px
 	border-radius: $BORDER_RADIUS
 	display: flex
@@ -96,8 +97,8 @@ footer
 		font-weight: 500
 
 /* Components
-
 .profile-pic
+	padding: 10px
 	display: flex
 	justify-content: center
 	img
@@ -109,7 +110,6 @@ footer
 	- drk: Dark
 	- lgt: Light
 	- trp: Transparent
-
 .drk-button
 	color: #FFFFFF
 	background: #212121
@@ -135,6 +135,7 @@ footer
 	padding: 5px 15px
 	border-radius: $BORDER_RADIUS
 	text-decoration: none
+	font-weight: 600
 	transition: all 0.3s
 	&:hover
 		transform: scale(1.1)
@@ -149,9 +150,11 @@ footer
 	h2
 		margin-bottom: 10px
 		font-size: 22px
+		font-weight: 600
 		text-align: center
 	p
 		margin-bottom: 10px
+		font-weight: 400
 		text-align: center
 		&[text-align^="left"]
 			text-align: left !important
@@ -163,6 +166,7 @@ footer
 .lgt-table
 	width: 100%
 	font-size: 15px
+	font-weight: 300
 	text-align: left
 	border-collapse: collapse
 	background: #212121
@@ -174,6 +178,7 @@ footer
 			text-align: center
 	th
 		padding: 10px
+		border: 1px solid #111111
 		text-align: center
 		color: #FFFFFF
 		background: #111111
@@ -208,7 +213,7 @@ footer
 			margin: -10px auto
 			max-width: 400px
 			td
-				padding: 15px 10px
+				padding: 10px
 	tr
 		transition: all 0.3s
 		&:hover
@@ -226,6 +231,7 @@ footer
 		display: flex
 		align-items: center
 		font-size: 17px
+		font-weight: 300
 		text-decoration: none
 		color: #FFFFFF
 		background: #212121
@@ -241,7 +247,6 @@ footer
 			text-align: center
 
 /* Positioning
-
 .left
 	margin-right: auto
 
@@ -251,16 +256,7 @@ footer
 .center
 	text-align: center
 
-.left-column
-	padding: 0 10px
-	padding-left: 0
-
-.right-column
-	padding: 0 10px
-	padding-right: 0
-
 /* Utility
-
 [dbg]
 	border: 1px solid red
 
@@ -271,16 +267,7 @@ footer
 	color: #FFFFFF !important
 	background-color: #212121 !important
 
-@media (max-width: 768px)
-	nav
-		display: none
-	.left-column
-		padding: 20px
-	.right-column
-		padding: 20px
-		.lgt-card:first-child
-			margin-top: -20px
-
+/* Media queries
 @media (max-width: 767px)
 	header .content
 		h1
@@ -289,10 +276,15 @@ footer
 			font-size: 12px
 			i
 				font-size: 10px
+	nav
+		display: none
 	.lgt-card
 		h2
 			font-size: 18px
 		p
+			font-size: 13px
+	.lgt-socials-bar
+		a
 			font-size: 13px
 	.lgt-table
 		font-size: 10px
