--- a/assets/styles/style.sass
+++ b/assets/styles/style.sass
@@ -162,7 +162,7 @@ footer
 			text-align: right !important
 
 .lgt-table
-	margin: 5px 0
+	margin: 10px 0
 	width: 100%
 	font-size: 15px
 	font-weight: 300
@@ -191,6 +191,8 @@ footer
 		padding: 25px 15px
 		border: 1px solid #111111
 		position: relative
+		&[empty]
+			text-align: center
 		&:empty::before
 			content: "-"
 		label
