--- a/assets/styles/style.sass
+++ b/assets/styles/style.sass
@@ -47,8 +47,9 @@ header
 	color: #FFFFFF
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
 	background: #343434
+	background-image: url('/assets/images/header-background.png')
 	background-position: center
-	.content
+	.tile
 		width: 100%
 		height: 100%
 		display: flex
@@ -75,7 +76,7 @@ header
 
 nav
 	margin-top: 20px
-	padding: 10px 20px
+	padding: 10px 25px
 	border-radius: $BORDER_RADIUS
 	display: flex
 	align-items: center
@@ -130,13 +131,11 @@ footer
 		background: #FFFFFF
 
 .drk-button, .lgt-button, .trp-button
-	padding: 5px 15px
 	border-radius: $BORDER_RADIUS
-	text-decoration: none
+	padding: 5px 15px
 	font-weight: 600
+	text-decoration: none
 	transition: all 0.3s
-	&:hover
-		transform: scale(1.1)
 
 .lgt-card
 	margin-top: 20px
@@ -145,11 +144,6 @@ footer
 	color: #FFFFFF
 	background: #343434
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
-	h2
-		margin: 5px 0
-		font-size: 22px
-		font-weight: 700
-		text-align: center
 	p
 		margin: 5px 0
 		font-weight: 400
@@ -160,6 +154,14 @@ footer
 			text-align: center !important
 		&[text-align^="right"]
 			text-align: right !important
+	h2
+		margin: 5px 0
+		font-size: 22px
+		font-weight: 700
+		text-align: center
+		text-transform: uppercase
+	hr
+		margin: 10px 0
 
 .lgt-table
 	margin: 10px 0
@@ -242,9 +244,10 @@ footer
 		color: #FFFFFF
 		background: #212121
 		box-shadow: 0 0 10px rgba(0, 0, 0, 0.2)
-		transition: all 0.3s
+		transition: all 0.1s
+		transform: scale(0.95)
 		&:hover
-			transform: scale(1.03)
+			transform: scale(1)
 			box-shadow: 0 0 10px rgba(0, 0, 0, 0.4)
 		i
 			margin-right: 10px
