--- a/assets/styles/style.sass
+++ b/assets/styles/style.sass
@@ -76,7 +76,7 @@ header
 
 nav
 	margin-top: 20px
-	padding: 10px 25px
+	padding: 12px 25px
 	border-radius: $BORDER_RADIUS
 	display: flex
 	align-items: center
@@ -101,8 +101,7 @@ footer
 	margin: 20px 0
 	text-align: center
 	img
-		width: 100%
-		max-width: 330px
+		width: 300px
 		border-radius: $BORDER_RADIUS
 
 /* Themed componants
