--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -106,7 +106,7 @@ header .tile h1 p {
 
 nav {
   margin-top: 20px;
-  padding: 10px 25px;
+  padding: 12px 25px;
   border-radius: 5px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -143,8 +143,7 @@ footer p {
 }
 
 .profile-pic img {
-  width: 100%;
-  max-width: 330px;
+  width: 300px;
   border-radius: 5px;
 }
 
