--- a/styles/_app.scss
+++ b/styles/_app.scss
@@ -2,14 +2,49 @@
     box-sizing: border-box;
 }
 
-html, body {
+body {
     margin: 0;
-    padding: 0;
+    padding: 20px 60px;
 
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    color: #e8e8e8;
+    background: #212121;
+
+    user-select: none;
+    font-family: "Poppins", "Helvetica Neue", "sans-serif";
+}
+
+footer {
+    padding: 5px;
+    border-radius: 5px;
+
+    background: #343434;
+    box-shadow: 0 0 20px rgb(0 0 0 / 30%);
+
+    text-align: center;
+    p {
+        margin: 0;
+        font-size: 11px;
+        font-weight: 500;
+    }
 }
 
 a {
     color: inherit;
-    text-decoration: none;
+}
+
+.row {
+    margin: 0;
+
+    & > * {
+        padding: 0 !important;
+    }
+}
+
+.image-wrapper {
+    text-align: center;
+    box-sizing: content-box;
+}
+
+.image-wrapper img {
+    border-radius: 5px;
 }
