--- a/components/ContactMenu.module.scss
+++ b/components/ContactMenu.module.scss
@@ -39,7 +39,8 @@
     flex-wrap: wrap;
 
     gap: 8px;
-    margin: 20px 0;
+    max-width: 400px;
+    margin: 20px auto;
     padding: 15px 10px;
     border-radius: 5px;
 
