--- a/components/main/NavBar.module.scss
+++ b/components/main/NavBar.module.scss
@@ -1,13 +1,16 @@
 .main {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
     height: 50px;
     padding: 0 25px;
     a {
         color: inherit;
         text-decoration: none;
+    }
+    h1 {
+        display: none;
+        margin: 0;
+        padding: 2px 10px;
+
+        border-radius: 5px;
     }
     ul {
         display: flex;
@@ -33,8 +36,7 @@
             &:first-child {
                 margin-left: 0;
             }
-            &:last-child,
-            &:only-child {
+            &:last-child {
                 margin-left: auto;
                 margin-right: 0;
 
@@ -50,5 +52,11 @@
                 background: #e8e8e8;
             }
         }
+    }
+}
+
+@media screen and (max-width: 875px) {
+    .main {
+        display: none;
     }
 }
